--- a/ghz_under_markovian_dephasing_fidelity_and_logarithmic_negativity.ipynb
+++ b/ghz_under_markovian_dephasing_fidelity_and_logarithmic_negativity.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# GHZ coherence under phase noise\n",
+    "# GHZ decoherence under phase noise\n",
     "\n"
    ]
   },
