--- a/ghz_under_markovian_dephasing_fidelity_and_logarithmic_negativity.ipynb
+++ b/ghz_under_markovian_dephasing_fidelity_and_logarithmic_negativity.ipynb
@@ -96,7 +96,7 @@
     "\\gamma(d) \\;=\\; c^{\\,N \\, r \\, (d-1)} .\n",
     "$$\n",
     "\n",
-    "### Analytic fidelity\n",
+    "### Fidelity\n",
     "\n",
     "Because GHZ’s fidelity depends only on the preserved coherence in the $\\{\\lvert 0^N\\rangle,\\lvert 1^N\\rangle\\}$ subspace,\n",
     "$$\n",
@@ -147,7 +147,7 @@
     "- Hits are **independent across qubits** and **memoryless across time** (Markovian).\n",
     "- Baseline: noise acts **only** on waits (no noise on $H/\\mathrm{CX}$).\n",
     "\n",
-    "### Analytic predictions\n",
+    "### Predictions\n",
     "With $r$ repeats per wait, total waits per qubit are $r(d-1)$, so the GHZ coherence decays as\n",
     "$$\n",
     "\\gamma(d)=c^{\\,N\\,r\\,(d-1)} .\n",
